<resources>
    <string name="app_name">Job Assignment</string>
    <string name="login">Login</string>
    <string name="Password">Password</string>
    <string name="go">Go</string>
    <string name="forgot_your_password">Forgot your password</string>
    <string name="register">REGISTER</string>
    <string name="repeat_password">Repeat password</string>
    <string name="email">Email</string>
    <string name="display_name">Display name</string>
    <string name="remember_pass">Remember login</string>
    <string name="text_your_status">Enter your status</string>
    <string name="count_character">0/256</string>
    <string name="edit">Chỉnh sửa</string>
    <string name="chup_anh">Chụp ảnh</string>
    <string name="chon_anh">Chọn từ kho ảnh</string>
    <string name="delete">Xóa nhóm</string>
    <string name="info">Thông tin nhóm</string>
    <string name="leave">Rời nhóm</string>
    <string name="text_nhap_ten_nhom">Nhập tên nhóm</string>
    <string name="add_member">Thêm thành viên</string>
    <string name="text_search">Search</string>
    <string name="default_status">Default status</string>
    <string name="add_to_group">Thêm vào nhóm</string>
    <string name="text_personal">Personal</string>
    <string name="text_groups">Groups</string>
    <string name="text_profile">Profile</string>
    <string name="text_loading">Loading...</string>
    <string name="text_load_failed">Load failed</string>
</resources>
