<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="vn.edu.hust.soict.khacsan.jobassignment.ui.signup.RegisterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">


        <FrameLayout
            android:layout_width="320dp"
            android:layout_height="400dp"
            android:layout_centerInParent="true"
            android:paddingTop="30dp">

            <android.support.v7.widget.CardView
                android:id="@+id/cv_add"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                app:cardBackgroundColor="#2ea67f"
                app:cardCornerRadius="10dp"
                app:cardElevation="3dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="50dp"
                        android:layout_marginTop="50dp"
                        android:text="@string/register"
                        android:textColor="#fff"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="10dp"
                        android:paddingEnd="30dp"
                        android:paddingStart="50dp">

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColorHint="#f0f7f4"
                            android:theme="@style/TextLabel">

                            <EditText
                                android:id="@+id/et_username"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/selector_bg_edit_2"
                                android:hint="@string/display_name"
                                android:inputType="text"
                                android:paddingBottom="2dp"
                                android:textColor="#f0f7f4"
                                android:textCursorDrawable="@drawable/bg_input_cursor_2"
                                android:textSize="13sp" />
                        </android.support.design.widget.TextInputLayout>

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="10dp"
                        android:paddingEnd="30dp"
                        android:paddingStart="50dp">

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColorHint="#f0f7f4"
                            android:theme="@style/TextLabel">

                            <EditText
                                android:id="@+id/et_email"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/selector_bg_edit_2"
                                android:hint="@string/email"
                                android:inputType="textEmailAddress"
                                android:paddingBottom="2dp"
                                android:textColor="#f0f7f4"
                                android:textCursorDrawable="@drawable/bg_input_cursor_2"
                                android:textSize="13sp" />
                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:orientation="horizontal"
                        android:paddingEnd="30dp"
                        android:paddingStart="50dp">

                        <FrameLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <android.support.design.widget.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColorHint="#f0f7f4"
                                android:theme="@style/TextLabel">

                                <EditText
                                    android:id="@+id/et_password"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:background="@drawable/selector_bg_edit_2"
                                    android:hint="@string/Password"
                                    android:inputType="textPassword"
                                    android:paddingBottom="10dp"
                                    android:textColor="#f0f7f4"
                                    android:textCursorDrawable="@drawable/bg_input_cursor_2"
                                    android:textSize="13sp" />
                            </android.support.design.widget.TextInputLayout>

                            <ImageButton
                                android:id="@+id/btn_visibility_pass"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="end"
                                android:background="@null"
                                android:src="@drawable/ic_visibility" />
                        </FrameLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:orientation="horizontal"
                        android:paddingEnd="30dp"
                        android:paddingStart="50dp">

                        <FrameLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <android.support.design.widget.TextInputLayout

                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColorHint="#f0f7f4"
                                android:theme="@style/TextLabel">

                                <EditText
                                    android:id="@+id/et_repeatpassword"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:background="@drawable/selector_bg_edit_2"
                                    android:hint="@string/repeat_password"
                                    android:inputType="textPassword"
                                    android:paddingBottom="10dp"
                                    android:textColor="#f0f7f4"
                                    android:textCursorDrawable="@drawable/bg_input_cursor_2"
                                    android:textSize="13sp" />
                            </android.support.design.widget.TextInputLayout>

                            <ImageButton
                                android:id="@+id/btn_visibility_repeat_pass"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="end"
                                android:background="@null"
                                android:src="@drawable/ic_visibility" />
                        </FrameLayout>

                    </LinearLayout>

                    <Button
                        android:id="@+id/bt_register"
                        android:layout_width="150dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/bt_shape_2"
                        android:stateListAnimator="@drawable/state_list_animator_z"
                        android:text="@string/go"
                        android:textColor="#2fa881" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab_close_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|top"
                android:src="@drawable/ic_close"
                android:transitionName="loginFab"
                app:fabSize="normal" />
        </FrameLayout>
    </RelativeLayout>
</ScrollView>
